--- a/index.css
+++ b/index.css
@@ -164,6 +164,9 @@ a:hover { color: inherit; }
 }
 #maincontentbarcontrols {
    float: right;
+   color: var(--headercolor);
+   background: var(--blockbgcolor);
+   border-radius: 3px;
 }
 
 /* Special styling JUST for the sidbar nav */
@@ -275,9 +278,9 @@ a:hover { color: inherit; }
 #discussionscontainer {
    min-height: 45%;
 }
-#discussions {
+/*#discussions {
    overflow-anchor: none;
-}
+}*/
 [data-messageframe] .avatar {
    margin: 0.3em;
    width: 30px;
